<?xml version="1.0" encoding="utf-8"?>

<!--
fragment_csci_c291.xml

Layout file for the CSCI-C 291 Fragment

Created by: Matthew Lonis
Created on: 2/27/17
Last Modified by: Matthew Lonis
Last Modified on: 3/5/17
Assignment/Project: A290 Final Project
Part of: A290FinalProject, refers to csciC291Fragment.java
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view_c291"
    tools:context="edu.indiana.mrlonis.a290finalproject.csciC291Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/csciC291CourseInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/course_info"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/csciC291CourseDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/csci_c291_course"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/csciC291Project1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/project_1"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/csciC291Project1Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/csci_c291_project1_name"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/csciC291Project1Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/csci_c291_project1_description"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/csciC291Project1File1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/csci_c291_project1_file1"
            android:layout_marginTop="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/csciC291Project1File2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/csci_c291_project1_file2"
            android:layout_marginTop="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/csciC291Project1File3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/csci_c291_project1_file3"
            android:layout_marginTop="10dp"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>
