<?xml version="1.0" encoding="utf-8"?>

<!--
fragment_home_page.xml

Layout file for the Home Page Fragment

Created by: Matthew Lonis
Created on: 2/27/17
Last Modified by: Matthew Lonis
Last Modified on: 3/5/17
Assignment/Project: A290 Final Project
Part of: A290FinalProject, refers to homePageFragment.java
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.indiana.mrlonis.a290finalproject.homePageFragment"
    android:layout_width="match_parent"
    android:id="@+id/scroll_view_home"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linear_layout_home"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_me"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/homePageImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mattlonis"
            android:contentDescription="@string/about_me"/>

        <TextView
            android:id="@+id/aboutMeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_me_description"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/aboutThisApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_this_app"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/aboutThisAppDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_this_app_description"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>